some minor fixes

--- a/views/emails.ejs
+++ b/views/emails.ejs
@@ -1,7 +1,7 @@
 
 <ul>
   <% if(emails && emails.length > 0) { %>
-    <strong>Emails</strong>
+    <strong>First Few Emails</strong>
     <% emails.forEach(email => { %>
       <li><strong><%= email.subject %></strong></li>
     <% }) %>
