--- a/views/emails.ejs
+++ b/views/emails.ejs
@@ -4,16 +4,19 @@
     <strong>First Few Emails</strong>
     <% emails.forEach(email => { %>
       <li><strong><%= email.subject %></strong></li>
+      <li><strong><%= email.id %></strong></li>
+      <% email.attachments.forEach(attachment => { %>
+        <li><strong><%= attachment.name %></strong></li>
+        <p><%= attachment.contentType %>, <%= attachment.size %></p>
+        <% if(attachment.contentType.startsWith('text')) { %>
+          <p><%= Buffer.from(attachment.contentBytes, 'base64').toString('utf8') %></p>
+        <% } %>
+      <% }) %>
     <% }) %>
   <% } %> <!-- Close the if block -->
 </ul> <!-- Close the ul -->
 
 
-
-
-<form action="/send-email" method="POST">
-  <button type="submit">Send Test Email</button>
-</form>
 
 <form action="/list-subs" method="POST">
   <button type="submit">List Subs</button>
@@ -25,4 +28,14 @@
 
 <form action="/emails" method="GET">
   <button type="submit">Show Emails</button>
+</form>
+
+<form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
+  <input type="file" name="file" required />
+  <button type="submit">Upload</button>
+</form>
+
+<!-- Send Email Form -->
+<form id="sendForm" action="/send" method="POST">
+  <button type="submit">Send</button>
 </form>
