--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,21 +1,19 @@
-<ul>
-  <% if(groupedMessages && Object.keys(groupedMessages).length> 0) { %>
-    <strong>Grouped Messages</strong>
-    <% Object.keys(groupedMessages).forEach(threadId=> { %>
-      <li>
-        <strong>Thread ID: <%= threadId %></strong>
-        <% groupedMessages[threadId].forEach(message=> { %>
-          <ul>
-            <li>
-              <%= message.subject %> From: <%= message.from.emailAddress.address %> To: <%= message.toRecipients.map(recipient => recipient.emailAddress.address).join(', ') %>
-            </li>
-          </ul>
-          <% }); %>
-      </li>
-      <% }); %>
-        <% } %> <!-- Close the if block -->
-</ul> <!-- Close the ul -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Upload Attachment</title>
+</head>
+<body>
+  <h1>Upload Attachment</h1>
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+    <label for="attachment">Select a file:</label>
+    <input type="file" id="attachment" name="attachment" required>
+    <button type="submit">Upload</button>
+  </form>
+</body>
+</html>
 
 <form action="/list-subs" method="POST">
   <button type="submit">List Subs</button>
